Fix spacing between tags

--- a/sass/_page.scss
+++ b/sass/_page.scss
@@ -90,7 +90,7 @@
   }
 
   .tag:not(:last-child) {
-    margin-right: 0.5rem;
+    margin-right: 0.6ch;
   }
 }
 
